--- a/EscapeMoscati4/Immagini.xaml
+++ b/EscapeMoscati4/Immagini.xaml
@@ -7,19 +7,17 @@
         mc:Ignorable="d"
         Title="Immagini" Height="450" Width="800">
     <Grid>
-        <Label Content="Immagine1" Margin="20,12,710,388"/>
-        <Label Content="Immagine2" Margin="385,10,345,390"/>
-        <Label Content="Immagine3" Margin="10,217,720,183"/>
-        <Image Margin="10,217,374,82" Source="/Successione 2.PNG" Stretch="Fill"/>
-        <Image Margin="385,12,25,217" Source="/Successione.PNG" Stretch="Fill"/>
-        <Image Margin="10,10,438,247" Source="/Triangolo.PNG" Stretch="Fill"/>
-        
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="Black"/>
-                <GradientStop Color="#FFB13E3E" Offset="1"/>
+                <GradientStop Color="Black" Offset="0.31"/>
+                <GradientStop Color="#FFD81D1D" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
+        <Label Content="Immagine1" Margin="20,12,710,388"/>
+        <Label Content="Immagine2" Margin="385,10,345,390"/>
+        <Image Margin="186,264,198,35" Source="/Successione 2.PNG" Stretch="Fill"/>
+        <Image Margin="385,12,25,217" Source="/Successione.PNG" Stretch="Fill"/>
+        <Image Margin="10,10,438,247" Source="/Triangolo.PNG" Stretch="Fill"/>
 
     </Grid>
 </Window>
